<resources>
    <string name="app_name">FirebaseLogin</string>
    <string name="btn_click">Button Click</string>
    <string name="login_logo">Login Logo</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="button_login">Login</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="remember_me">Remember me</string>
    <string name="login_google"><u>Login with Google</u></string>
    <string name="register"><u>Register here</u></string>
    <string name="button_register">Register</string>
    <string name="already_registered"><u>Already Register?</u></string>
    <string name="button_reset">Reset Password</string>
    <string name="reset_instruction">Type your registered email, we will send you password reset instructions.</string>
    <string name="reset_title">Forget your password?</string>
    <string name="back_to_login">Back to Login</string>
    <string name="email">Email</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="remove_user">Remove User</string>
    <string name="log_out">Log Out</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="minimum_password">Password cannot be less than 6 letters</string>
    <string name="back_to_main">Back to Main</string>
    <string name="new_password_hint">New Password</string>
</resources>
