<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayoutContainter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLoginImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".1"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewLoginGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cardViewBackground"
        app:cardCornerRadius="25dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineLoginImage"
        app:layout_constraintWidth_percent=".85">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutLoginGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewInstruction"
                app:passwordToggleTint="@color/buttonColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/buttonColor"
                    android:drawableStart="@drawable/email"
                    android:drawablePadding="10dp"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/buttonColor"
                android:backgroundTintMode="src_in"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/button_reset"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputEmail" />

            <TextView
                android:id="@+id/textViewResetTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="24dp"
                android:text="@string/reset_title"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/buttonColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewInstruction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:text="@string/reset_instruction"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/buttonColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewResetTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewLoginImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="1dp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineLoginImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineLoginImage">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/login_logo"
            app:srcCompat="@drawable/icon" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewDivider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewGoogleSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".85">

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textViewGoogleSignIn"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingStart="@dimen/padding_button_text"
        android:paddingEnd="@dimen/padding_button_text"
        android:text="@string/login_google"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/buttonColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/cardViewDivider" />

    <TextView
        android:id="@+id/textViewLogin"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_button_text"
        android:paddingEnd="@dimen/padding_button_text"
        android:text="@string/back_to_login"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/buttonColor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/cardViewDivider"
        app:layout_constraintTop_toBottomOf="@+id/cardViewDivider" />

</androidx.constraintlayout.widget.ConstraintLayout>